@@ -2,6 +2,8 @@ Cascading Change Log
 
 2.5.5 [unreleased]
 
+  Fixed issue where c.t.Fields#resolve() would lose type information with complex selectors.
+
   Added new c.f.h.p.HadoopPlanner property to disable adjacent tap removal optimization. Setting
   "cascading.multimapreduceplanner.collapseadjacentaps" to false will disable the optimization that is on by default.
   This optimization can in a few cases reduce the number of MR jobs, but without consistent type information, could
